Fix importing ratings causing overflow

--- a/client/src/views/Profile/Profile.module.scss
+++ b/client/src/views/Profile/Profile.module.scss
@@ -77,6 +77,7 @@
 .FileSelectorWrapper {
   clear: both;
   float: left;
+  overflow: hidden;
 }
 
 .DeleteAccountButtonWrapper {
@@ -86,6 +87,7 @@
 
 .RatingSpinner {
   float: left;
+  margin-left: 1%;
 }
 
 .BioWrapper {
